# server/nodejs-server-server/api/swagger.yaml
@@ -152,10 +152,10 @@ paths:
         - "write:pets"
         - "read:pets"
       x-swagger-router-controller: "Auth"
-  /consultas_gerenciais/i18n/pt-br/{resourceId}:
+  /app/i18n/pt-br/{resourceId}:
     get:
       tags:
-      - "auth"
+      - "app"
       summary: "Find pet by ID"
       description: "Returns a single pet"
       operationId: "getI18n"
@@ -179,7 +179,45 @@ paths:
           description: "Pet not found"
       security:
       - api_key: []
-      x-swagger-router-controller: "Auth"
+      x-swagger-router-controller: "App"
+  /app/api/V1/departments:
+    get:
+      tags:
+      - "app"
+      summary: "Find pet by ID"
+      description: "Returns a single pet"
+      operationId: "getDepartments"
+      produces:
+      - "application/xml"
+      - "application/json"
+      parameters:
+      - name: "page"
+        in: "query"
+        description: "ID of pet to return"
+        required: false
+        type: "string"
+      - name: "size"
+        in: "query"
+        description: "ID of pet to return"
+        required: false
+        type: "string"
+      - name: "sort"
+        in: "query"
+        description: "ID of pet to return"
+        required: false
+        type: "string"
+      responses:
+        200:
+          description: "successful operation"
+          schema:
+            $ref: "#/definitions/inline_response_200_3"
+        400:
+          description: "Invalid ID supplied"
+        404:
+          description: "Pet not found"
+      security:
+      - api_key: []
+      x-swagger-router-controller: "App"
   /user:
     post:
       tags:
