# server/nodejs-server-server/controllers/Auth.js
@@ -12,14 +12,14 @@ module.exports.dashboard = function dashboard (req, res, next) {
   Auth.dashboard(req.swagger.params, res, next);
 };
 
-module.exports.getI18n = function getI18n (req, res, next) {
-  Auth.getI18n(req.swagger.params, res, next);
-};
-
 module.exports.profileInfo = function profileInfo (req, res, next) {
   Auth.profileInfo(req.swagger.params, res, next);
 };
 
 module.exports.profileImage = function profileImage (req, res, next) {
   Auth.profileImage(req.swagger.params, res, next);
+};
+
+module.exports.getI18n = function getI18n (req, res, next) {
+  Auth.getI18n(req.swagger.params, res, next);
 };
